logs/slurm-33429744-first_level.out
Building DAG of jobs...
Your conda installation is not configured to use strict channel priorities. This is however crucial for having robust and correct environments (for details, see https://conda-forge.org/docs/user/tipsandtricks.html). Please consider to configure strict priorities by executing 'conda config --set channel_priority strict'.
Using shell: /usr/bin/bash
Provided cores: 2
Rules claiming more threads will be scaled down.
Provided resources: mem_mb=16000, mem_mib=15259, disk_mb=1000, disk_mib=954, cpus=2, time_min=10, gpu=0
Select jobs to execute...

[Tue Mar 14 11:51:04 2023]
rule first_level:
    input: /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1
    output: /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_unthresholded_fc.nii.gz, /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_figure.png
    jobid: 0
    reason: Missing output files: /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_unthresholded_fc.nii.gz, /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_figure.png
    wildcards: resultsdir=/nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh, subject=rugby1, session=b, network=Salience
    resources: mem_mb=16000, mem_mib=15259, disk_mb=1000, disk_mib=954, tmpdir=/dev/shm/jobs/33429744, cpus=2, time_min=10, gpu=0

python ./scripts/first_level_prob_atlas_hcp1.py /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1/ses-b/func/sub-rugby1_ses-b_task-rest_run-001_space-MNI152NLin2009cAsym_res-2_desc-brain_mask.nii.gz /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1/ses-b/func/sub-rugby1_ses-b_task-rest_run-001_space-MNI152NLin2009cAsym_res-2_desc-preproc_bold.nii.gz /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1/ses-b/func/sub-rugby1_ses-b_task-rest_run-001_desc-confounds_timeseries.tsv /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_unthresholded_fc.nii.gz /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_figure.png -a_img ./atlas/MSDL_rois/msdl_rois.nii -a_lab ./atlas/MSDL_rois/msdl_rois_labels.csv -tr 1.5 -rg csf white_matter trans_x trans_y trans_z rot_x rot_y rot_z -ntwk Salience -hp 0.01 -lp 0.1 -fwhm 6 -fdr 0.01 -fc 0.25 -v
Activating conda environment: .snakemake/conda/77cd6f8bc7354c0aed9f21ce8b6acbbb_
  File "/scale_wlg_persistent/filesets/project/uoa03264/fmri_workflow/./scripts/first_level_prob_atlas_hcp1.py", line 281
    display_mode='z',
    ^
SyntaxError: invalid syntax
[Tue Mar 14 11:51:04 2023]
Error in rule first_level:
    jobid: 0
    input: /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1
    output: /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_unthresholded_fc.nii.gz, /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_figure.png
    conda-env: /scale_wlg_persistent/filesets/project/uoa03264/fmri_workflow/.snakemake/conda/77cd6f8bc7354c0aed9f21ce8b6acbbb_
    shell:
        python ./scripts/first_level_prob_atlas_hcp1.py /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1/ses-b/func/sub-rugby1_ses-b_task-rest_run-001_space-MNI152NLin2009cAsym_res-2_desc-brain_mask.nii.gz /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1/ses-b/func/sub-rugby1_ses-b_task-rest_run-001_space-MNI152NLin2009cAsym_res-2_desc-preproc_bold.nii.gz /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/bids/derivatives/fmriprep/sub-rugby1/ses-b/func/sub-rugby1_ses-b_task-rest_run-001_desc-confounds_timeseries.tsv /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_unthresholded_fc.nii.gz /nesi/nobackup/uoa03264/fMRIpipeline_data/processed_test_josh/first_level_results/sub-rugby1/ses-b/sub-rugby1_ses-b_Salience_figure.png -a_img ./atlas/MSDL_rois/msdl_rois.nii -a_lab ./atlas/MSDL_rois/msdl_rois_labels.csv -tr 1.5 -rg csf white_matter trans_x trans_y trans_z rot_x rot_y rot_z -ntwk Salience -hp 0.01 -lp 0.1 -fwhm 6 -fdr 0.01 -fc 0.25 -v
        (one of the commands exited with non-zero exit code; note that snakemake uses bash strict mode!)

Shutting down, this might take some time.
Exiting because a job execution failed. Look above for error message
